--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 
 before_install:
   - sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-add-repository ppa:canonical-qt5-edgers/qt5-proper 
+  - sudo apt-add-repository -y ppa:canonical-qt5-edgers/qt5-proper 
   - sudo apt-get update -qq
   - sudo apt-get install -qq g++-4.7
   - sudo apt-get install -qq qtdeclarative5-dev 
