Add missing parameters to qmake invocation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,13 @@ compiler:
   - gcc
 
 before_install:
-  - sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-add-repository -y ppa:canonical-qt5-edgers/qt5-proper 
   - sudo apt-get update -qq
-  - sudo apt-get install -qq g++-4.7
   - sudo apt-get install -qq qtdeclarative5-dev 
 
 script:
   - mkdir -p build
   - cd build
-  - qmake 
+  - qmake ..\IM\IM.pro -r
   - mkdir build
 
