--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ compiler:
 
 before_install:
   - sudo apt-add-repository -y ppa:canonical-qt5-edgers/qt5-proper
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -qq qtdeclarative5-dev qt5-default
-  - sudo apt-get install -qq g++-4.7
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.7
+  - sudo apt-get install -qq qtdeclarative5-dev qt5-default g++-4.8
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8
   - sudo update-alternatives --config gcc
 
 script:
