--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
   - sudo apt-get install -qq qtdeclarative5-dev qt5-default g++-4.8
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8
-  - sudo update-alternatives --config gcc
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8 --slave /usr/bin/gcov gcov /usr/bin/gcov-4.8
+  - sudo update-alternatives --set gcc /usr/bin/gcc-4.8
   - sudo pip install cpp-coveralls --use-mirrors
 
 script:
@@ -20,5 +20,5 @@ script:
   - make check
 
 after_success:
-  - coveralls --gcov gcov-4.8
+  - coveralls
 
