--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 script:
   - mkdir -p build
   - cd build
-  - qmake ../IM/IM.pro -r
+  - qmake ../IM/IM.pro -r CONFIG+=debug
   - make
   - make check
 
