Exclude build directory (moc_ files) from coveralls.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
 
 after_success:
   - cd ..
-  - coveralls -e /usr/include -e IM/unit-tests -e IM/qml-tests
+  - coveralls -e /usr/include -e IM/unit-tests -e IM/qml-tests -e build
 
