--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
 
 after_success:
   - cd ..
-  - coveralls -e /usr/include -e IM/unit-tests -e IM/unit-tests-cpp -e IM/integration-tests -e build/unit-tests -e build/unit-tests-cpp -e build/integration-tests -e IM/main-cpp/main.cpp
+  - coveralls -e /usr/include -e IM/unit-tests -e IM/unit-tests-cpp -e IM/integration-tests -e build/unit-tests -e build/ -e IM/main-cpp/main.cpp -e 
 
