--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
 
 after_success:
   - cd ..
-  - coveralls -e /usr/include -e IM/unit-tests -e IM/unit-tests-cpp -e IM/integration-tests -e build/unit-tests -e build/
+  - coveralls -e /usr/include -e IM/unit-tests -e IM/unit-tests-cpp -e IM/integration-tests -e build/unit-tests -e build
 
