--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
 
 after_success:
   - cd ..
-  - coveralls -e /usr/include -e IM/unit-tests -e IM/unit-tests-cpp -e IM/integration-tests -e build/unit-tests -e build/messenger/moc_* -e build/application-cpp/moc_*
+  - coveralls -e /usr/include -e IM/unit-tests -e IM/unit-tests-cpp -e IM/integration-tests -e build/unit-tests -e build/messenger/moc_communication.cpp -e build/application-cpp/moc_sendwidget.cpp
 
